# DevelopNotes

./: LICENSE
docs/: LICENSE  README.md  requirements.txt
docs/source/: backpropagation.rst  conf.py  conv_arithmetic.rst  cuda.rst  deeplearning_others.rst  deepseek.rst  develop_environment.rst  floating_point.rst  floating_point_number.rst  index.rst  mathfunctions.rst  mlas.rst  mlsys.rst  multi_platform_dev.rst  nlp.rst  onnxruntime.rst  operator.rst  reStructuredText.rst  variance.rst
docs/source/deeplearning/: autodiff.rst  huggingface.rst  index.rst  layernorm.rst  variance.rst
docs/source/env/: centos7.rst  cmake.rst  conda.rst  docker.rst  git.rst  homebrew.rst  index.rst  manylinux.rst
docs/source/python/: index.rst  numpy.rst
projects/: .clang-format  .gitignore
projects/cuda_mma/: .clang-format  half_gemm_m16n8k16.cu  half_gemm_m16n8k16.h  setup.py
projects/cuda_mma/csrc/: mma_8x8x16_s8.cu
projects/cuda_mma/loadmatrix/: CMakeLists.txt  loadmatrix.cu  loadmatrix_1.cu
projects/cuda_mma/m16n8k16_fp16/: half_gemm_m16n8k16_torch.cc  macros.h  test_half_gemm.cc  test_torch_gemm.py
projects/cuda_mma/mma/: __init__.py  mma_interface.py
projects/cuda_mma/tests/: test_mma_8x8x16_s8.py
projects/cudnn_flash_attn/: CMakeLists.txt
projects/cudnn_flash_attn/cmake/: cudnn.cmake  torch.cmake
projects/cudnn_flash_attn/cpp/: fusedattn.cc  fusedattn.h  fusedattn_torch.cc  helpers.h  test_fusedattn.cc
projects/cudnn_flash_attn/python/: attn_with_ladder_mask.py  test_sequence_first.py  test_torch_wrapper.py
projects/flash_attn_cudnn/: attn_with_ladder_mask.py
projects/gemm/: CMakeLists.txt
projects/gemm/cmake/: cpu_arch.cmake
projects/gemm/lib/: mlasi.h  platform.cpp  sgemm.cpp
projects/gemm/test/: gemm.cc  timer.h
projects/manylinux/: Dockerfile  README.md
projects/multiplatforms/macros/: cpu_arch.h
projects/platform/: CMakeLists.txt
projects/platform/cmake/: cpu_arch.cmake
projects/triton_flash_attn/: flash_attn_triton.py  test_prefill_flash_attn.py
projects/variance/: CMakeLists.txt
projects/variance/src/: cpu_arch.h  input_array.h  main.cc  var_neon.cc  var_neon.h  var_scalar.cc  var_scalar.h  var_sse.cc  var_sse.h
python/: multi_layer_lstm.py  test_lstm.py  welford.py
